kubernetes/apps/emqx/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  annotations:
    hajimari.io/appName: EMQX
    hajimari.io/icon: mdi:quality-medium
    hajimari.io/group: servers
spec:
  ingressClassName: internal
  rules:
    - host: emqx.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
